이미지 파일 용량 증가

--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -19,3 +19,6 @@ AWS_S3_BUCKET=${AWS_S3_BUCKET}
 
 OCR_SECERET_KEY=${OCR_SECERET_KEY}
 OCR_API=${OCR_API}
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
