--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -22,3 +22,6 @@ OCR_API=${OCR_API}
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#KAKAO
+KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID}
